--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I currently work in SEO (Search Engine Optimization). Helping small businesses get found on Google.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Hampstead, New Hampshire</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video Games, Golf, Basketball & Reading.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Own a digital marketing company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Londonderry, New Hampshire</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Professional development & to be more marketable as an employee</p>
     </section>
 
     <footer id="footer">
